--- a/pages/projects.html
+++ b/pages/projects.html
@@ -10,9 +10,9 @@
     <div class="terminal-wrapper">
         <div class="terminal">
             <div class="terminal-header">
-                <a href="selector.html"><div class="terminal-button red"></div></a>
-                <a href="selector.html"><div class="terminal-button yellow"></div></a>
-                <a href="selector.html"><div class="terminal-button green"></div></a>
+                <a href="/pages/selector.html"><div class="terminal-button red"></div></a>
+                <a href="/pages/selector.html"><div class="terminal-button yellow"></div></a>
+                <a href="/pages/selector.html"><div class="terminal-button green"></div></a>
             </div>
             <div class="terminal-body">
                 <h1>Projects</h1>
