--- a/pages/selector.html
+++ b/pages/selector.html
@@ -11,9 +11,9 @@
         <div class="terminal">
             <div class="terminal-header">
                 <!-- Back button -->
-                <a href="index.html"><span class="terminal-button red"></span></a>
-                <a href="index.html"><span class="terminal-button yellow"></span></a>
-                <a href="index.html"><span class="terminal-button green"></span></a>
+                <a href=""><span class="terminal-button red"></span></a>
+                <a href=""><span class="terminal-button yellow"></span></a>
+                <a href=""><span class="terminal-button green"></span></a>
             </div>
             <div class="terminal-body">
                 <div class="terminal-prompt">user@portfolio:~$</div>
