--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div class="terminal-wrapper">
         <div class="terminal">
             <div class="terminal-header">
-                <a href="selector.html"><span class="terminal-button red"></span></a>
-                <a href="selector.html"><span class="terminal-button yellow"></span></a>
-                <a href="selector.html"><span class="terminal-button green"></span></a>
+                <a href="/pages/selector.html"><span class="terminal-button red"></span></a>
+                <a href="/pages/selector.html"><span class="terminal-button yellow"></span></a>
+                <a href="/pages/selector.html"><span class="terminal-button green"></span></a>
             </div>
             <div class="terminal-body" id="terminalBody">
                 <div class="terminal-prompt">user@portfolio:~$</div>
@@ -22,6 +22,6 @@
         </div>
     </div>
 
-    <script src="../script.js"></script> <!-- Link to your JavaScript file -->
+    <script src="/script.js"></script> <!-- Link to your JavaScript file -->
 </body>
 </html>
