--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,6 +7,7 @@
     <link rel="stylesheet" href="/style/style.css"> <!-- Link to your CSS file -->
 </head>
 <body>
+    <canvas id="matrixCanvas"></canvas>
     <div class="terminal-wrapper">
         <div class="terminal">
             <div class="terminal-header">
