--- a/pages/contact.html
+++ b/pages/contact.html
@@ -19,6 +19,7 @@
                 <div class="contact-info">
                     <h2>Lenny Bos</h2>
                     <p>Email: lenny.bos07@gmail.com</p>
+                    <p>Phone: 0611771395</p>
                 </div>
 
             </div>
@@ -26,5 +27,6 @@
     </div>
 
     <script src="../script.js"></script> <!-- Link to your JavaScript file -->
+    
 </body>
 </html>
