--- a/pages/about.html
+++ b/pages/about.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/style/style.css"> <!-- Link to your CSS file -->
 </head>
 <body>
+    <canvas id="matrixCanvas"></canvas>
     <div class="terminal-wrapper">
         <div class="terminal">
             <div class="terminal-header">
@@ -31,7 +32,6 @@
                     <li>JavaScript</li>
                     <li>MySQL</li>
                     <li>Figma</li>
-                    <li>... (add more skills as needed)</li>
                 </ul>
                 <h2>Languages</h2>
                 <ul>
