--- a/pages/projects.html
+++ b/pages/projects.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/style/style.css"> <!-- Link to your CSS file -->
 </head>
 <body>
+    <canvas id="matrixCanvas"></canvas>
     <div class="terminal-wrapper">
         <div class="terminal">
             <div class="terminal-header">
@@ -17,8 +18,8 @@
             <div class="terminal-body">
                 <h1>Projects</h1>
                 <div class="project-info">
-                    <h2>Sushi Store</h2>
-                    <p>Repository: <a href="https://github.com/ROCMondriaanTIN/sd22-p5-projectzuzu-lennyaaaa.git">https://github.com/ROCMondriaanTIN/sd22-p5-projectzuzu-lennyaaaa.git</a></p>
+                    <h2>Dashboard Crypto, Valuta</h2>
+                    <p>Repository: <a href="https://github.com/ROCMondriaanTIN/sd22-p04-project-dashboard-team-lenny-boss.git">https://github.com/ROCMondriaanTIN/sd22-p04-project-dashboard-team-lenny-boss.git</a></p>
                 </div>
                 <div class="project-info">
                     <h2>Calculator</h2>
