--- a/pages/selector.html
+++ b/pages/selector.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/style/style.css"> <!-- Link to your CSS file -->
 </head>
 <body>
+    <canvas id="matrixCanvas"></canvas>
     <div class="terminal-wrapper">
         <div class="terminal">
             <div class="terminal-header">
